gọi anh là gà đầu đàn vì hôm nay anh thống kê

--- a/Views/Shared/_AdminDropdownMenu.cshtml
+++ b/Views/Shared/_AdminDropdownMenu.cshtml
@@ -22,7 +22,7 @@
             <i class="icon-user-follow"></i>
             <span class="ml-2">Gán role cho User</span>
         </a>
-        <a class="dropdown-item" asp-area="Admin" asp-page="/Manage/Calendar">
+        <a class="dropdown-item" asp-area="Admin" asp-page="/Manage/Dashboard1">
             <i class="icon-l-settings"></i>
             <span class="ml-2">Trang quản trị </span>
         </a>
