Add '/phone' Page in HomeControllers, change some elements

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
         <div class="container navbar sub-nav-item">
             <ul class="nav justify-content-center" style="margin: auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/phone"><i class="bi bi-phone-fill"></i> ĐIỆN THOẠI</a>
+                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Phone"><i class="bi bi-phone-fill"></i> ĐIỆN THOẠI</a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
