sản phẩm bị cháy

--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -198,10 +198,10 @@
                     </li>
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-cart-simple"></i><span class="nav-text">Sản phẩm</span>
+                            <i class="icon icon-cart-simple"></i><span class="nav-text">Quản lý sản phẩm</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./uc-select2.html">Sản phẩm</a></li>
+                            <li><a asp-controller="Products" asp-action="Index" asp-area="Admin">Sản phẩm</a></li>
                             <li><a asp-controller="Categories" asp-action="Index" asp-area="Admin">Danh mục</a></li>
                             <li><a href="./uc-noui-slider.html">Nhà cung cấp</a></li>
                         </ul>
