--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Trang chủ";
 }
 @section Styles {
-    <link href="@Url.Content("~/css/views/home/index.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("/css/views/home/index.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css")" rel="stylesheet" type="text/css" />
 }
