--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -7,21 +7,21 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User)) {
         <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Xin chào @UserManager.GetUserName(User)!</a>
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-link text-dark"><i class="bi bi-box-arrow-left" style="font-size: 18px; vertical-align: middle;"></i>&nbspĐăng xuất</button>
             </form>
         </li>
         @await Html.PartialAsync("_AdminDropdownMenu.cshtml")
     }
     else {
         <li class="nav-item">
-            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Đăng ký</a>
+            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register"><i class="bi bi-pencil-square" style="font-size: 18px; vertical-align: middle;"></i>&nbspĐăng ký</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark " id="login" asp-area="Identity" asp-page="/Account/Login">Đăng nhập</a>
+            <a class="nav-link text-dark " id="login" asp-area="Identity" asp-page="/Account/Login"><i class="bi bi-box-arrow-in-right" style="font-size: 18px; vertical-align: middle;"></i>&nbspĐăng nhập</a>
         </li>
     }
 </ul>
