--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -44,8 +44,10 @@ a.navbar-brand {
         text-decoration: none;
     }
     .sub-nav-item > ul > li > a:hover {
-        color: white;
+        color: #be1e2d;
         text-decoration: none;
+        background-color: white;
+        transition: 0.3s ease-in;
     }
     .sub-nav-item > ul > li > a:active {
         color: white;
@@ -89,7 +91,9 @@ a.navbar-brand {
     background-color: white;
     color: #be1e2d;
 }
-
+.dropdown-menu > div > ul > li > a > img {
+    border-radius: 0px !important;
+}
 .dropdown-menu > div > a:hover {
     background-color: white;
     color: black;
@@ -110,7 +114,7 @@ a.navbar-brand {
     .dropdown-menu > div {
         display: inline-table;
         padding: 10px;
-       
+        
     }
 /*nav*/
 .logo {
