--- a/Areas/Admin/Pages/Manage/DashBoard1.cshtml
+++ b/Areas/Admin/Pages/Manage/DashBoard1.cshtml
@@ -293,7 +293,7 @@
                                     <tr>
                                         <td>
                                             <div class="round-img">
-                                                <a href=""><img width="35" src="./images/avatar/1.png" alt=""></a>
+                                                <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
                                             </div>
                                         </td>
                                         <td>Lew Shawon</td>
@@ -304,7 +304,7 @@
                                     <tr>
                                         <td>
                                             <div class="round-img">
-                                                <a href=""><img width="35" src="./images/avatar/1.png" alt=""></a>
+                                                <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
                                             </div>
                                         </td>
                                         <td>Lew Shawon</td>
@@ -315,7 +315,7 @@
                                     <tr>
                                         <td>
                                             <div class="round-img">
-                                                <a href=""><img width="35" src="./images/avatar/1.png" alt=""></a>
+                                                <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
                                             </div>
                                         </td>
                                         <td>lew Shawon</td>
@@ -327,7 +327,7 @@
                                     <tr>
                                         <td>
                                             <div class="round-img">
-                                                <a href=""><img width="35" src="./images/avatar/1.png" alt=""></a>
+                                                <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
                                             </div>
                                         </td>
                                         <td>Lew Shawon</td>
@@ -338,7 +338,7 @@
                                     <tr>
                                         <td>
                                             <div class="round-img">
-                                                <a href=""><img width="35" src="./images/avatar/1.png" alt=""></a>
+                                                <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
                                             </div>
                                         </td>
                                         <td>lew Shawon</td>
@@ -350,7 +350,7 @@
                                     <tr>
                                         <td>
                                             <div class="round-img">
-                                                <a href=""><img width="35" src="./images/avatar/1.png" alt=""></a>
+                                                <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
                                             </div>
                                         </td>
                                         <td>Lew Shawon</td>
@@ -640,5 +640,5 @@
     <script src="~/vendor/jqvmap/js/jquery.vmap.usa.js"></script>
     <script src="~/vendor/jquery.counterup/jquery.counterup.min.js"></script>
 
-    <script src="~/js/dashboard/dashboard-1.js"></script>
+    <script src="~/js/dashboard/dashboard.js" type="text/javascript"></script>
 </body>
