--- a/Areas/Admin/Pages/Manage/DashBoard2.cshtml
+++ b/Areas/Admin/Pages/Manage/DashBoard2.cshtml
@@ -289,7 +289,7 @@
                         <div class="recent-comment m-t-15">
                             <div class="media">
                                 <div class="media-left">
-                                    <a href="#"><img class="media-object mr-3" src="./images/avatar/4.png" alt="..."></a>
+                                    <a href="#"><img class="media-object mr-3" src="~/images/avatar/4.png" alt="..."></a>
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading text-primary">john doe</h4>
@@ -299,7 +299,7 @@
                             </div>
                             <div class="media">
                                 <div class="media-left">
-                                    <a href="#"><img class="media-object mr-3" src="./images/avatar/2.png" alt="..."></a>
+                                    <a href="#"><img class="media-object mr-3" src="~/images/avatar/2.png" alt="..."></a>
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading text-success">Mr. John</h4>
@@ -309,7 +309,7 @@
                             </div>
                             <div class="media">
                                 <div class="media-left">
-                                    <a href="#"><img class="media-object mr-3" src="./images/avatar/3.png" alt="..."></a>
+                                    <a href="#"><img class="media-object mr-3" src="~/images/avatar/3.png" alt="..."></a>
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading text-danger">Mr. John</h4>
@@ -319,7 +319,7 @@
                             </div>
                             <div class="media">
                                 <div class="media-left">
-                                    <a href="#"><img class="media-object mr-3" src="./images/avatar/4.png" alt="..."></a>
+                                    <a href="#"><img class="media-object mr-3" src="~/images/avatar/4.png" alt="..."></a>
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading text-primary">john doe</h4>
@@ -329,7 +329,7 @@
                             </div>
                             <div class="media">
                                 <div class="media-left">
-                                    <a href="#"><img class="media-object mr-3" src="./images/avatar/2.png" alt="..."></a>
+                                    <a href="#"><img class="media-object mr-3" src="~/images/avatar/2.png" alt="..."></a>
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading text-success">Mr. John</h4>
@@ -339,7 +339,7 @@
                             </div>
                             <div class="media no-border">
                                 <div class="media-left">
-                                    <a href="#"><img class="media-object mr-3" src="./images/avatar/3.png" alt="..."></a>
+                                    <a href="#"><img class="media-object mr-3" src="~/images/avatar/3.png" alt="..."></a>
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading text-info">Mr. John</h4>
