--- a/Areas/Admin/Views/Categories/Create.cshtml
+++ b/Areas/Admin/Views/Categories/Create.cshtml
@@ -11,12 +11,12 @@
         <div class="row page-titles mx-0">
             <div class="col-sm-6 p-md-0">
                 <div class="welcome-text">
-                    <h4>Hi, welcome back!</h4>
+                    <h4>Thêm danh mục mới</h4>
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a asp-action="Index">Sản phẩm</a></li>
+                    <li class="breadcrumb-item"><a asp-action="Index">Quản lý sản phẩm</a></li>
                     <li class="breadcrumb-item active"><a asp-action="Index">Danh mục</a></li>
                     <li class="breadcrumb-item active"><a href="javascript:void(0)">Create</a></li>
                 </ol>
@@ -54,16 +54,18 @@
                         <span asp-validation-for="Picture" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <input type="submit" value="Create" class="btn btn-success" />
+                        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
-    <div>
-        <a asp-action="Index" class="icon icon-arrow-left">Back to List</a>
-    </div>
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
 </body>
 
 @section Scripts {
