--- a/Areas/Admin/Views/Customers/Details.cshtml
+++ b/Areas/Admin/Views/Customers/Details.cshtml
@@ -1,8 +1,9 @@
-﻿@model WEB2.Models.Category
+﻿@model WEB2.Models.Customer
 
 @{
     ViewData["Title"] = "Details";
 }
+
 <head>
     <link href="~/css/style.css" rel="stylesheet">
 </head>
@@ -16,8 +17,8 @@
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a asp-action="Index">Quản lý sản phẩm</a></li>
-                    <li class="breadcrumb-item active"><a asp-action="Index">Danh mục</a></li>
+                    <li class="breadcrumb-item"><a asp-action="Index">Nhân sự</a></li>
+                    <li class="breadcrumb-item active"><a asp-action="Index">Khách hàng</a></li>
                     <li class="breadcrumb-item active"><a href="javascript:void(0)">Chi tiết</a></li>
                 </ol>
             </div>
@@ -27,40 +28,34 @@
 
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CategoryName)
+                @Html.DisplayNameFor(model => model.CreditCardTypeID)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CategoryName)
+                @Html.DisplayFor(model => model.CreditCardTypeID)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.ShipAddress)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Description)
+                @Html.DisplayFor(model => model.ShipAddress)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Active)
+                @Html.DisplayNameFor(model => model.DateEntered)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Active)
+                @Html.DisplayFor(model => model.DateEntered)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Picture)
+                @Html.DisplayNameFor(model => model.AppUser)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Picture)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.ParentCategory)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.ParentCategory.CategoryName)
+                @Html.DisplayFor(model => model.AppUser.Id)
             </dd>
         </dl>
     </div>
     <div>
 
-        <a asp-action="Edit" class="btn btn-outline-primary" asp-route-id="@Model.CategoryId">Edit</a>
+        <a asp-action="Edit" class="btn btn-outline-primary" asp-route-id="@Model.CustomerID">Edit</a>
 
         <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
     </div>
