--- a/Areas/Admin/Views/Customers/Index.cshtml
+++ b/Areas/Admin/Views/Customers/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<WEB2.Models.Category>
+﻿@model IEnumerable<WEB2.Models.Customer>
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -18,14 +19,14 @@
                     <h4>Hi, welcome back!</h4>
 
                     <span class="ml-1">
-                        <a asp-action="Create">Tạo danh mục mới</a>
+                        <a asp-action="Create">Tạo mới khách hàng</a>
                     </span>
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý sản phẩm</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Danh mục</a></li>
+                    <li class="breadcrumb-item"><a href="javascript:void(0)">Nhân sự</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Khách hàng</a></li>
                 </ol>
             </div>
         </div>
@@ -44,19 +45,16 @@
                                 <thead>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.CreditCardTypeID)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.ShipAddress)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
+                                            @Html.DisplayNameFor(model => model.DateEntered)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.AppUser)
                                         </th>
                                         <th></th>
                                     </tr>
@@ -65,24 +63,21 @@
                                     @foreach (var item in Model) {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.CategoryName)
+                                                @Html.DisplayFor(modelItem => item.CreditCardTypeID)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Description)
+                                                @Html.DisplayFor(modelItem => item.ShipAddress)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Active)
+                                                @Html.DisplayFor(modelItem => item.DateEntered)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Picture)
+                                                @Html.DisplayFor(modelItem => item.AppUser.Id)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.ParentCategory.CategoryName)
-                                            </td>
-                                            <td>
-                                                <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                                                <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                                                <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                                                <a asp-action="Edit" asp-route-id="@item.CustomerID">Edit</a> |
+                                                <a asp-action="Details" asp-route-id="@item.CustomerID">Details</a> |
+                                                <a asp-action="Delete" asp-route-id="@item.CustomerID">Delete</a>
                                             </td>
                                         </tr>
                                     }
@@ -90,19 +85,16 @@
                                 <tfoot>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.CreditCardTypeID)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.ShipAddress)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
+                                            @Html.DisplayNameFor(model => model.DateEntered)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.AppUser)
                                         </th>
                                         <th></th>
                                     </tr>
