--- a/Areas/Admin/Views/Inventories/Index.cshtml
+++ b/Areas/Admin/Views/Inventories/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@model IEnumerable<WEB2.Models.Category>
+﻿@model IEnumerable<WEB2.Models.Inventory>
+
 @{
     ViewData["Title"] = "Index";
 }
+
 
 <head>
     <!-- Datatable -->
@@ -18,14 +20,14 @@
                     <h4>Hi, welcome back!</h4>
 
                     <span class="ml-1">
-                        <a asp-action="Create">Tạo danh mục mới</a>
+                        <a asp-action="Create">Thêm kho mới</a>
                     </span>
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý sản phẩm</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Danh mục</a></li>
+                    <li class="breadcrumb-item"><a href="javascript:void(0)">Hàng hóa</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Kho vận</a></li>
                 </ol>
             </div>
         </div>
@@ -44,19 +46,13 @@
                                 <thead>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.TotalAmount)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.Name)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.Adress)
                                         </th>
                                         <th></th>
                                     </tr>
@@ -65,24 +61,18 @@
                                     @foreach (var item in Model) {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.CategoryName)
+                                                @Html.DisplayFor(modelItem => item.TotalAmount)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Description)
+                                                @Html.DisplayFor(modelItem => item.Name)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Active)
+                                                @Html.DisplayFor(modelItem => item.Adress)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Picture)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.ParentCategory.CategoryName)
-                                            </td>
-                                            <td>
-                                                <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                                                <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                                                <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                                                <a asp-action="Edit" asp-route-id="@item.InventoryId">Edit</a> |
+                                                <a asp-action="Details" asp-route-id="@item.InventoryId">Details</a> |
+                                                <a asp-action="Delete" asp-route-id="@item.InventoryId">Delete</a>
                                             </td>
                                         </tr>
                                     }
@@ -90,19 +80,13 @@
                                 <tfoot>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.TotalAmount)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.Name)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.Adress)
                                         </th>
                                         <th></th>
                                     </tr>
