--- a/Areas/Admin/Views/Products/Details.cshtml
+++ b/Areas/Admin/Views/Products/Details.cshtml
@@ -12,7 +12,7 @@
         <div class="row page-titles mx-0">
             <div class="col-sm-6 p-md-0">
                 <div class="welcome-text">
-                    <h3>Thông tin chi tiết</h3>
+                    <h4>Thông tin chi tiết</h4>
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
@@ -150,7 +150,12 @@
         </dl>
     </div>
     <div>
-        <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Edit" class="btn btn-outline-primary" asp-route-id="@Model.ProductId">Edit</a>
+
+        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
     </div>
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
 </body>
