--- a/Areas/Admin/Views/Products/Edit.cshtml
+++ b/Areas/Admin/Views/Products/Edit.cshtml
@@ -12,7 +12,7 @@
         <div class="row page-titles mx-0">
             <div class="col-sm-6 p-md-0">
                 <div class="welcome-text">
-                    <h3>Chỉnh sửa sản phẩm</h3>
+                    <h4>Chỉnh sửa sản phẩm</h4>
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
@@ -25,6 +25,7 @@
         </div>
 
         <!-- row -->
+
         <div class="row">
             <div class="col-md-4">
                 <form asp-action="Edit">
@@ -95,14 +96,18 @@
                         <span asp-validation-for="Note" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                        <input type="submit" value="Save" class="btn btn-outline-primary" />
+                        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
                     </div>
                 </form>
             </div>
         </div>
-        <div>
-            <a asp-action="Index">Trở về</a>
-        </div>
+    </div>
+
+    <!-- Required vendors -->
+    <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
 </body>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
