--- a/Areas/Admin/Views/Products/Index.cshtml
+++ b/Areas/Admin/Views/Products/Index.cshtml
@@ -19,7 +19,7 @@
                     <h4>Hi, welcome back!</h4>
 
                     <span class="ml-1">
-                        <a asp-action="Create">Create New Product</a>
+                        <a asp-action="Create">Thêm sản phẩm</a>
                     </span>
                 </div>
             </div>
@@ -56,9 +56,6 @@
                                         </th>
 
                                         <th>
-                                            @Html.DisplayNameFor(model => model.ProductDetail)
-                                        </th>
-                                        <th>
                                             @Html.DisplayNameFor(model => model.MSRP)
                                         </th>
 
@@ -68,19 +65,6 @@
 
                                         <th>
                                             @Html.DisplayNameFor(model => model.Color)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.UnitInStock)
-                                        </th>
-
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.UnitInOrder)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ReorderLevel)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.CurrentOrder)
                                         </th>
 
                                         <th>
@@ -107,9 +91,6 @@
                                             </td>
 
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.ProductDetail)
-                                            </td>
-                                            <td>
                                                 @Html.DisplayFor(modelItem => item.MSRP)
                                             </td>
 
@@ -119,19 +100,6 @@
 
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Color)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.UnitInStock)
-                                            </td>
-
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.UnitInOrder)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.ReorderLevel)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.CurrentOrder)
                                             </td>
 
                                             <td>
@@ -162,9 +130,6 @@
                                         </th>
 
                                         <th>
-                                            @Html.DisplayNameFor(model => model.ProductDetail)
-                                        </th>
-                                        <th>
                                             @Html.DisplayNameFor(model => model.MSRP)
                                         </th>
 
@@ -174,19 +139,6 @@
 
                                         <th>
                                             @Html.DisplayNameFor(model => model.Color)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.UnitInStock)
-                                        </th>
-
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.UnitInOrder)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ReorderLevel)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.CurrentOrder)
                                         </th>
 
                                         <th>
