--- a/Areas/Admin/Views/Staffs/Delete.cshtml
+++ b/Areas/Admin/Views/Staffs/Delete.cshtml
@@ -1,8 +1,9 @@
-﻿@model WEB2.Models.Category
+﻿@model WEB2.Models.Staff
 
 @{
     ViewData["Title"] = "Delete";
 }
+
 <head>
     <link href="~/css/style.css" rel="stylesheet">
 </head>
@@ -11,13 +12,13 @@
         <div class="row page-titles mx-0">
             <div class="col-sm-6 p-md-0">
                 <div class="welcome-text">
-                    <h4>Bạn có chắc muốn xóa không?</h4>
+                    <h4>Bạn có muốn đuổi nhân viên này?</h4>
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a asp-action="Index">Quản lý sản phẩm</a></li>
-                    <li class="breadcrumb-item active"><a asp-action="Index">Danh mục</a></li>
+                    <li class="breadcrumb-item"><a asp-action="Index">Nhân sự</a></li>
+                    <li class="breadcrumb-item active"><a asp-action="Index">Nhân viên</a></li>
                     <li class="breadcrumb-item active"><a href="javascript:void(0)">Xóa</a></li>
                 </ol>
             </div>
@@ -27,40 +28,28 @@
 
         <dl class="row">
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CategoryName)
+                @Html.DisplayNameFor(model => model.WorkingDay)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CategoryName)
+                @Html.DisplayFor(model => model.WorkingDay)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.AppUser)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Description)
+                @Html.DisplayFor(model => model.AppUser.Id)
             </dd>
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Active)
+                @Html.DisplayNameFor(model => model.Inventory)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Active)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Picture)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Picture)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.ParentCategory)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.ParentCategory.CategoryName)
+                @Html.DisplayFor(model => model.Inventory.InventoryId)
             </dd>
         </dl>
     </div>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoryId" />
+        <input type="hidden" asp-for="StaffId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
     </form>
