--- a/Areas/Admin/Views/Staffs/Index.cshtml
+++ b/Areas/Admin/Views/Staffs/Index.cshtml
@@ -1,7 +1,10 @@
-﻿@model IEnumerable<WEB2.Models.Category>
+﻿@model IEnumerable<WEB2.Models.Staff>
+
 @{
     ViewData["Title"] = "Index";
 }
+
+
 
 <head>
     <!-- Datatable -->
@@ -18,14 +21,14 @@
                     <h4>Hi, welcome back!</h4>
 
                     <span class="ml-1">
-                        <a asp-action="Create">Tạo danh mục mới</a>
+                        <a asp-action="Create">Thêm nhân viên</a>
                     </span>
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý sản phẩm</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Danh mục</a></li>
+                    <li class="breadcrumb-item"><a href="javascript:void(0)">Nhân sự</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Nhân viên</a></li>
                 </ol>
             </div>
         </div>
@@ -44,19 +47,13 @@
                                 <thead>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.WorkingDay)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.AppUser)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.Inventory)
                                         </th>
                                         <th></th>
                                     </tr>
@@ -65,24 +62,18 @@
                                     @foreach (var item in Model) {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.CategoryName)
+                                                @Html.DisplayFor(modelItem => item.WorkingDay)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Description)
+                                                @Html.DisplayFor(modelItem => item.AppUser.Id)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Active)
+                                                @Html.DisplayFor(modelItem => item.Inventory.InventoryId)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Picture)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.ParentCategory.CategoryName)
-                                            </td>
-                                            <td>
-                                                <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                                                <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                                                <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                                                <a asp-action="Edit" asp-route-id="@item.StaffId">Edit</a> |
+                                                <a asp-action="Details" asp-route-id="@item.StaffId">Details</a> |
+                                                <a asp-action="Delete" asp-route-id="@item.StaffId">Delete</a>
                                             </td>
                                         </tr>
                                     }
@@ -90,19 +81,13 @@
                                 <tfoot>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.WorkingDay)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.AppUser)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.Inventory)
                                         </th>
                                         <th></th>
                                     </tr>
