--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -158,7 +158,7 @@
                             <li>
                                 <a class="has-arrow" href="javascript:void()" aria-expanded="false">Email</a>
                                 <ul aria-expanded="false">
-                                    <li><a href="./email-compose.html">Compose</a></li>
+                                    <li><a asp-area="Admin" asp-page="/Manage/Email_Compose">Compose</a></li>
                                     <li><a href="./email-inbox.html">Inbox</a></li>
                                     <li><a href="./email-read.html">Read</a></li>
                                 </ul>
@@ -203,10 +203,30 @@
                         <ul aria-expanded="false">
                             <li><a asp-controller="Products" asp-action="Index" asp-area="Admin">Sản phẩm</a></li>
                             <li><a asp-controller="Categories" asp-action="Index" asp-area="Admin">Danh mục</a></li>
-                            <li><a href="./uc-noui-slider.html">Nhà cung cấp</a></li>
+                            <li><a asp-controller="Suppliers" asp-action="Index" asp-area="Admin">Nhà cung cấp</a></li>
                         </ul>
                     </li>
+                    <li class="nav-label">Tổ chức</li>
 
+                    <li>
+                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                            <i class="icon icon-settings"></i><span class="nav-text">Nhân sự</span>
+                        </a>
+                        <ul aria-expanded="false">
+                            <li><a asp-controller="Staffs" asp-action="Index" asp-area="Admin">Nhân viên</a></li>
+                            <li><a asp-controller="Customers" asp-action="Index" asp-area="Admin">Khách hàng</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                            <i class="icon icon-cart-9"></i><span class="nav-text"> Hàng hóa</span>
+                        </a>
+                        <ul aria-expanded="false">
+                            <li><a asp-controller="Inventories" asp-action="Index" asp-area="Admin">Kho vận</a></li>
+                            <li><a asp-controller="Vouchers" asp-action="Index" asp-area="Admin">Khuyến mãi</a></li>
+                            <li><a asp-controller="Shipments" asp-action="Index" asp-area="Admin">Vận chuyển</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-label">Content</li>
                     <li>
                         <a href="widget-basic.html" aria-expanded="false">
@@ -272,24 +292,7 @@
     <!--**********************************
         Scripts
     ***********************************-->
-    <!-- Required vendors -->
-    <script src="~/vendor/global/global.min.js"></script>
-    <script src="~/js/quixnav-init.js"></script>
-    <script src="~/js/custom.min.js"></script>
 
-    <!-- Vectormap -->
-    <script src="~/vendor/raphael/raphael.min.js"></script>
-    <script src="~/vendor/morris/morris.min.js"></script>
-
-    <script src="~/vendor/gaugeJS/dist/gauge.min.js"></script>
-
-    <!-- Owl Carousel -->
-    <script src="~/vendor/owl-carousel/js/owl.carousel.min.js"></script>
-
-    <!-- Counter Up -->
-    <script src="~/vendor/jqvmap/js/jquery.vmap.min.js"></script>
-    <script src="~/vendor/jqvmap/js/jquery.vmap.usa.js"></script>
-    <script src="~/vendor/jquery.counterup/jquery.counterup.min.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
